--- a/erp-ui/package.json
+++ b/erp-ui/package.json
@@ -20,9 +20,11 @@
     "@angular/router": "^18.0.0",
     "@fortawesome/angular-fontawesome": "^0.15.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@ng-select/ng-select": "^13.0.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "crypto-js": "^4.2.0",
+    "font-awesome": "4.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.17.2",
     "tslib": "^2.3.0",
